[package]
name = "hiver-cache"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Caching abstraction for Hiver Framework.
Hiver框架的缓存抽象。
Equivalent to: Spring Cache Abstraction (@Cacheable, @CacheEvict, @CachePut)
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# Enable Redis cache backend / 启用 Redis 缓存后端
redis = ["dep:redis", "hiver-data-redis"]

# Enable MessagePack serialization (requires redis feature) / 启用 MessagePack 序列化（需要 redis 特性）
msgpack = ["dep:rmp-serde"]

# All features / 所有特性
all = ["redis", "msgpack"]

[lints]
workspace = true

[dependencies]
# Async runtime / 异步运行时
hiver-runtime = { path = "../hiver-runtime", version = "0.1.0-alpha.6" }

# Caching implementations / 缓存实现
moka = { workspace = true }
quick_cache = { workspace = true }

# Serialization / 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling / 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async traits / 异步trait
async-trait = { workspace = true }
futures = { workspace = true }

# Time / 时间
chrono = { workspace = true }
time = { workspace = true }

# Hashing / 哈希
siphasher = { workspace = true }

# Metrics / 指标
metrics = { workspace = true }

# Async runtime / 异步运行时 (for tokio::sync types)
tokio = { workspace = true, features = ["sync"] }
dashmap = { workspace = true }
once_cell = { workspace = true }

# Redis cache backend (optional) / Redis 缓存后端（可选）
redis = { version = "1.2", features = ["aio", "tokio-comp", "connection-manager"], optional = true }
hiver-data-redis = { path = "../hiver-data-redis", version = "0.1.0-alpha.6", optional = true }

# MessagePack serialization (optional) / MessagePack 序列化（可选）
rmp-serde = { version = "1.3", optional = true }

# Logging (optional, for redis backend) / 日志（可选，用于 redis 后端）
tracing = { workspace = true, optional = true }

[dev-dependencies]
# Testing / 测试
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
dashmap = { workspace = true }
once_cell = { workspace = true }
criterion = { workspace = true }
