[package]
name = "hiver-cloud-stream"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Spring Cloud Stream equivalent for Hiver Framework.
Hiver框架的Spring Cloud Stream等价功能。
Unified streaming abstraction over Kafka and RabbitMQ.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Async / 异步
tokio = { workspace = true, features = ["sync", "time", "rt"] }
async-trait = { workspace = true }

# Serialization / 序列化
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Tracing / 追踪
tracing = { workspace = true }

# Error handling / 错误处理
thiserror = { workspace = true }

# Optional binder implementations / 可选的 Binder 实现
hiver-kafka = { path = "../hiver-kafka", version = "0.1.0-alpha.6", optional = true }
hiver-amqp = { path = "../hiver-amqp", version = "0.1.0-alpha.6", optional = true }

[features]
default = []
kafka = ["dep:hiver-kafka"]
amqp = ["dep:hiver-amqp"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
