[package]
name = "hiver-data-commons"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Common data access abstractions for Hiver Framework"
keywords = ["hiver", "data", "repository", "spring-data"]
categories = ["database", "asynchronous"]

[features]
default = []

# Query wrapper support (MyBatis-Plus style)
query = []

# Full features
full = ["query"]

[dependencies]
# Async runtime
hiver-runtime = { path = "../hiver-runtime", version = "0.1.0-alpha.6" }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Async trait support
async-trait = "0.1"

# UUID support (for entity IDs)
uuid = { workspace = true, features = ["v4", "serde"] }

# Chrono for datetime
chrono = { workspace = true, features = ["serde"] }

# Hex encoding for bytes
hex = "0.4"
