[package]
name = "hiver-data-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for Hiver data layer"
keywords = ["hiver", "data", "orm", "macros", "derive"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
# Proc macro toolkit
syn = { workspace = true, features = ["extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Attribute macros
proc-macro-error = { workspace = true }

# Async support
async-trait = { workspace = true }

[dev-dependencies]
hiver-data-commons = { path = "../hiver-data-commons", version = "0.1.0-alpha.6" }
hiver-data-rdbc = { path = "../hiver-data-rdbc", version = "0.1.0-alpha.6" }
