[package]
name = "hiver-data-mongodb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MongoDB integration for Hiver Framework (Repository, ReactiveMongoTemplate)"
keywords = ["hiver", "data", "mongodb", "nosql", "database"]
categories = ["database", "asynchronous"]

[features]
default = []

# Enable async runtime support
runtime = ["dep:hiver-runtime"]

# All features
all = ["runtime"]

[dependencies]
# Data commons
hiver-data-commons = { path = "../hiver-data-commons", version = "0.1.0-alpha.6" }

# Data macros for Model derive
hiver-data-macros = { path = "../hiver-data-macros", version = "0.1.0-alpha.6" }

# Async runtime (optional)
hiver-runtime = { path = "../hiver-runtime", version = "0.1.0-alpha.6", optional = true }

# MongoDB driver
mongodb = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# UUID support
uuid = { workspace = true, features = ["v4", "serde"] }

# Chrono for datetime
chrono = { workspace = true, features = ["serde"] }

# Logging
tracing = { workspace = true }

# Futures support
futures-util = "0.3"

# Tokio for async runtime
tokio = { workspace = true, features = ["sync"] }
