[package]
name = "hiver-data-orm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ORM integration for Hiver Framework (Active Record, Query Builder)"
keywords = ["hiver", "data", "orm", "active-record", "query-builder"]
categories = ["database", "asynchronous"]

[features]
default = []

# Sea ORM integration (using 2.0 RC for sqlx 0.8 support)
sea-orm = ["dep:sea-orm"]

# Diesel integration (optional)
diesel = ["dep:diesel"]

# SQLx integration (optional)
sqlx = ["dep:sqlx"]

# All ORM integrations
all = ["sea-orm", "diesel", "sqlx"]

[dependencies]
# Data commons
hiver-data-commons = { path = "../hiver-data-commons", version = "0.1.0-alpha.6" }

# Data RDBC for reactive database access
hiver-data-rdbc = { path = "../hiver-data-rdbc", version = "0.1.0-alpha.6" }

# Transaction support
hiver-tx = { path = "../hiver-tx", version = "0.1.0-alpha.6" }

# Data macros for Model derive
hiver-data-macros = { path = "../hiver-data-macros", version = "0.1.0-alpha.6" }

# Async runtime
hiver-runtime = { path = "../hiver-runtime", version = "0.1.0-alpha.6" }

# Sea ORM 2.0 RC with sqlx 0.8 support
sea-orm = { version = "2.0.0-rc", optional = true, features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "macros"] }

# Diesel (optional)
diesel = { version = "2.3", optional = true, features = ["postgres", "mysql", "sqlite"] }

# SQLx (optional)
sqlx = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# UUID support
uuid = { version = "1.12", features = ["v4", "serde"] }

# Chrono for datetime
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = { workspace = true }

# Futures support
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
hiver-data-rdbc = { path = "../hiver-data-rdbc", version = "0.1.0-alpha.6" }

