[package]
name = "hiver-data-rdbc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reactive database access for Hiver Framework (R2DBC equivalent)"
keywords = ["hiver", "data", "r2dbc", "database", "reactive"]
categories = ["database", "asynchronous"]

[features]
default = ["any", "postgres"]

# Multi-database support via sqlx Any (recommended)
any = ["sqlx/any", "sqlx/runtime-tokio"]

# Individual database drivers (optional)
postgres = ["sqlx/postgres", "sqlx/runtime-tokio"]
mysql = ["sqlx/mysql", "sqlx/runtime-tokio"]
sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]
all = ["postgres", "mysql", "sqlite", "any"]

# R2DBC compatibility layer
r2dbc-compat = []

# Transaction bridge with hiver-tx
tx-bridge = ["dep:hiver-tx"]

[dependencies]
# Data commons
hiver-data-commons = { path = "../hiver-data-commons", version = "0.1.0-alpha.6", features = ["query"] }

# Optional transaction management bridge
hiver-tx = { path = "../hiver-tx", version = "0.1.0-alpha.6", optional = true }

# Async runtime
hiver-runtime = { path = "../hiver-runtime", version = "0.1.0-alpha.6" }

# Tokio async mutex for transaction handling
tokio = { workspace = true, features = ["sync"] }

# SQLx for reactive database access
sqlx = { workspace = true, features = ["chrono"] }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1"

# Async trait support
async-trait = "0.1"

# UUID support
uuid = { workspace = true, features = ["v4", "serde"] }

# Chrono for datetime
chrono = { workspace = true, features = ["serde"] }

# Logging
tracing = { workspace = true }

# Futures support
futures-util = "0.3"
