[package]
name = "hiver-data-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Redis integration for Hiver Framework (RedisTemplate, Cache)"
keywords = ["hiver", "data", "redis", "cache", "database"]
categories = ["database", "asynchronous"]

[features]
default = []

# Enable async runtime support
runtime = ["dep:hiver-runtime"]

# Connection pooling
pool = ["dep:deadpool", "dep:deadpool-redis"]

# Cluster support
cluster = ["redis/cluster-async"]

# All features
all = ["runtime", "pool", "cluster"]

[dependencies]
# Data commons
hiver-data-commons = { path = "../hiver-data-commons", version = "0.1.0-alpha.6" }

# Data macros for Model derive
hiver-data-macros = { path = "../hiver-data-macros", version = "0.1.0-alpha.6" }

# Async runtime (optional)
hiver-runtime = { path = "../hiver-runtime", version = "0.1.0-alpha.6", optional = true }

# Redis driver
redis = { workspace = true }

# Connection pool (optional)
deadpool = { workspace = true, optional = true }
deadpool-redis = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# UUID support
uuid = { workspace = true, features = ["v4", "serde"] }

# Chrono for datetime
chrono = { workspace = true, features = ["serde"] }

# Logging
tracing = { workspace = true }

# Futures support
futures-util = "0.3"

# Tokio for async runtime
tokio = { workspace = true, features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
