[package]
name = "hiver-data-rest"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Spring Data REST equivalent for Hiver Framework.
Hiver框架的Spring Data REST等价功能。
Auto-generates type-safe REST handlers from Repository traits.
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Data layer / 数据层
hiver-data-commons = { path = "../hiver-data-commons", version = "0.1.0-alpha.6" }

# Async / 异步
async-trait = { workspace = true }

# Serialization / 序列化
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Tracing / 追踪
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
