[package]
name = "hiver-devtools"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """Spring Boot DevTools equivalent for Hiver Framework.
Hiver框架的Spring Boot DevTools等价功能。"""
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
# Async / 异步
tokio = { workspace = true, features = ["sync", "time", "rt", "fs", "process"] }

# Serialization / 序列化
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Logging / 日志
tracing = { workspace = true }

# File watching / 文件监控 (inotify/kqueue)
notify = { workspace = true }

# Error handling / 错误处理
thiserror = { workspace = true }

# WebSocket (LiveReload) / WebSocket（LiveReload）
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
