[package]
name = "hiver-flyway"
version = "0.1.0-alpha"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "postgres", "mysql", "chrono", "any"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"]}
