[package]
name = "hiver-flyway"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "postgres", "mysql", "chrono", "any"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"]}
