[package]
name = "hiver-i18n"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Internationalization (i18n) support for Hiver (equivalent to Spring MessageSource and ResourceBundle)"

[dependencies]
hiver-core = { path = "../hiver-core" }
tokio = { workspace = true, features = ["sync", "fs", "io-util", "time"] }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = "2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
