[package]
name = "hiver-kafka"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Apache Kafka support for Hiver Framework.
Hiver框架的Apache Kafka支持。
Equivalent to: Spring Kafka, Spring Cloud Stream
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rdkafka"]

# RdKafka client (enabled by default)
rdkafka = ["dep:rdkafka"]

# SSL support
ssl = ["rdkafka?/ssl"]

# GSSAPI support
gssapi = ["rdkafka?/gssapi"]

[lints]
workspace = true

[dependencies]
# Async runtime / 异步运行时
hiver-runtime = { path = "../hiver-runtime" }
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }

# Serialization / 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling / 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async traits / 异步trait
async-trait = { workspace = true }
futures = { workspace = true }

# Kafka client / Kafka客户端
rdkafka = { version = "0.39", optional = true, features = ["cmake-build", "tokio"] }

# Logging / 日志
tracing = { workspace = true }

# Utilities / 工具
once_cell = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
